# gurmukhiutils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  main.yml  publish.yml
gurmukhiutils/: ascii.py  constants.py  convert.py  remove.py  strip.py  unicode.py
gurmukhiutils/converters/: gurmukhi_to_roman_translit.py  guru_latn.py  guru_latn_pa.py
tests/: test_ascii.py  test_ascii_unicode_ascii.py  test_remove.py  test_strip.py  test_unicode.py
tests/converters/: test_gurmukhi_to_roman_translit.py  test_guru_latn.py  test_guru_latn_pa.py
